@@ -30,6 +30,18 @@ Summary of important user-visible changes for image 2.0.1:
 
       imerode
 
+ ** The functions `imerode' and `imdilate' no longer require that image and
+    structuring element be of same class. They now perform faster for all black
+    and white images, independently of their class, and always return an image
+    of same class as the input image.
+
+ ** The shape option has been implemented for `imerode' and `imdilate' for black
+    and white images.
+
+ ** With the increased performance in `imerode' and `imdilate', all other
+    functions that use them, such `imopen' and `imclose', also get a performance
+    boost for black and white images.
+
 Summary of important user-visible changes for image 2.0.0:
 -------------------------------------------------------------------
 
